<resources>
    <string name="app_name">RobotCar</string>
    <string name="rstr_connect">Connect</string>
    <string name="rstr_disconnect">Disconnect</string>

    <string name="xv_connectBtn">Connect</string>
    <string name="xv_diconnectBtn">Close</string>
    <string name="xv_connectionStatus">Not Connected</string>
    <string name="xv_connectedDevice">NXT 03</string>
    <string name="xv_connection">NXT Device BlueTooth Connection</string>
    <string name="xv_driving">Want to drive...??</string>
    <string name="xv_power">Power</string>
    <string name="xv_BatteryLevel">Battery Level</string>
    <string name="xv_MotorCUp"></string>
    <string name="xv_MotorCpowertext">Power</string>
    <string name="xv_MotorCseekBar"></string>
    <string name="xv_MotorCDown"></string>


    <!-- for robot_image_cell.xml -->
    <string name="poll">poll</string>
    <string name="stop">stop</string>

    <!-- for poll.xml -->
    <string name="sensorPolling">NXT Device Sensor reading</string>
    <string name="resetSensors">Reset Sensors</string>
    <string name="resetServos">Reset Servos</string>
    <string name="xv_preferences">Preferences</string>
    <string name="xv_aboutapp">About App</string>
    <string name="xv_Batterylevel">Battery Level</string>
    <string name="xv_timeInterval">Select Motors</string>
    <string name="xv_defaultSpeed">Default Speed</string>
    <string name="xv_batterydescription">Poll Battery level every 1 minute</string>
    <string name="xv_timeintervaldescription">Motor and servo port(A B C) Layout</string>
    <string name="xv_defaultspeeddescription">Set power level 100 instead of 75</string>
    <string name="hot">Hot</string>
    <string name="playSounds">Play Sounds</string>
    <string name="cold">Cold</string>
    <string name="haveANiceDay">Have A Nice Day</string>
    <string name="goodMorning">Good Morning</string>
    <string name="thankYou">Thank You</string>
    <string name="woops">Woops</string>
    <string name="goodbye">Good Bye</string>
    <string-array name="xv_listArray">
        <item>Motor : A and B</item>
        <item>Motor : B and C</item>
        <item>Motor : A and C</item>
    </string-array>
    <string-array name="xv_listValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
