<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/connect" tools:context=".MainActivity"
    android:background="#000000">

    <TextView android:text="@string/xv_connection" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/xv_txtLabel"
        android:layout_marginLeft="60dp"
        android:textColor="#ffffff"/>



    <TableLayout
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <TableRow
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_margin="1dp">

            <!--android:background="@drawable/offbluetooth"-->
            <ImageView
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:cropToPadding="false"
                android:padding="20px"
                android:layout_weight="10"
                android:layout_gravity="bottom"
                android:id="@+id/BImgView"
                android:layout_marginBottom="5sp"
                android:background="@android:drawable/stat_sys_data_bluetooth"
                android:gravity="center"
                android:height="0dp" />

        </TableRow>


    </TableLayout>

    <TextView
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/xv_connectionStatus"
        android:id="@+id/xv_connectionStatus"
        android:layout_marginTop="200dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="18dp"
        android:textStyle="bold"
        />








    <TableLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center">
        <TableRow
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp">
            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:id="@+id/xv_connectBtn"
                android:text="@string/xv_connectBtn"
                android:textSize="18dp"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/white" />
        </TableRow>
        <TableRow
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:id="@+id/xv_diconnectBtn"
                android:text="@string/xv_diconnectBtn"
                android:textSize="18dp"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/white"
                android:gravity="center"
                />
        </TableRow>
    </TableLayout>
</RelativeLayout>
